Import of version 0.76.2 for Windows

--- a/doc/mkdict.1
+++ b/doc/mkdict.1
@@ -104,8 +104,8 @@ Default substitutions: Enigma specific
 .RE
 .TP
 .B \-g
-apply Good-Turing smoothing to the dictionary. The smoothing is done by SGT.
-The variable SGTPATH has to be set.
+apply Good-Turing smoothing to the dictionary. The smoothing is done by SGT.exe.
+SGT.exe has to be in the same directory as mkdict.py.
 .
 .
 .\" --------------------------------------------------------------------
